--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -275,7 +275,7 @@
                 {
                     text: "מהו השורש והגזרה של המילה 'נוטים'?",
                     answer: "נטה",
-                    explanation: "שורש מגזרת נחי ל\"י"
+                    explanation: "שורש מגזרת נחי לי\"ה"
                 },
                 {
                     text: "מהו השורש והגזרה של המילה 'מתחילים'?",
