--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -61,38 +61,58 @@
             }
         }
 
-        .button {
-        width: 100%;
-        color: white;
-        background: linear-gradient(90deg, #A8E063, #56AB2F);
-        padding: 12px;
+    /* עיצוב כללי לכפתור */
+    .button {
+        background: linear-gradient(90deg, #E0E0E0, #BDBDBD); /* גרדיאנט אפור רך */
+        color: #333; /* טקסט אפור כהה */
+        padding: 12px 20px;
         border: none;
-        border-radius: 8px;
+        border-radius: 6px;
         cursor: pointer;
-        margin: 5px 0;
         font-size: 1rem;
         font-weight: bold;
         text-transform: uppercase;
         transition: all 0.3s ease;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
-        touch-action: manipulation;
     }
 
     .button:hover {
-        background: linear-gradient(90deg, #50C878, #2E7D32);
-        transform: translateY(-2px);
+        background: linear-gradient(90deg, #BDBDBD, #9E9E9E); /* אפור כהה יותר */
+        transform: scale(1.05); /* אפקט הגדלה קל */
         box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.15);
     }
 
     .button:active {
-        background: linear-gradient(90deg, #004494, #007ba0);
-        transform: translateY(0);
+        background: linear-gradient(90deg, #9E9E9E, #757575); /* אפור עמוק */
+        transform: scale(1); /* חזרה למצב רגיל */
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
     }
 
-    .button:focus {
-        outline: 2px solid #00D4FF;
-        outline-offset: 4px;
+    /* עיצוב לכפתור "צור מבחן חדש" */
+    .new-test-button {
+        background: linear-gradient(90deg, #6ECB63, #4CAF50); /* גרדיאנט ירוק רך */
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1rem;
+        font-weight: bold;
+        text-transform: uppercase;
+        transition: all 0.3s ease;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
+    }
+
+    .new-test-button:hover {
+        background: linear-gradient(90deg, #57A957, #3E8E41); /* ירוק כהה יותר */
+        transform: scale(1.05); /* אפקט הגדלה קל */
+        box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.15);
+    }
+
+    .new-test-button:active {
+        background: linear-gradient(90deg, #3E8E41, #2E7D32); /* ירוק עמוק */
+        transform: scale(1); /* חזרה למצב רגיל */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.06);
     }
 
         @media (min-width: 768px) {
@@ -164,7 +184,7 @@
     <h1>מבחן דקדוק עברית - שורשים ומשקלים</h1>
     
     <div class="controls">
-        <button onclick="generateNewTest()" class="button new-test-button">צור מבחן חדש</button>
+        <button2 onclick="generateNewTest()" class="button new-test-button">צור מבחן חדש</button2>
         <select id="questionCount" class="answer-input">
             <option value="10" selected>10 שאלות</option>
         </select>
@@ -182,11 +202,12 @@
         <div id="patternQuestions"></div>
     </div>
 
-    <button o<button onclick="generateNewTest()" class="button new-test-button">צור מבחן חדש</button>
+    <button onclick="generateNewTest()" class="button new-test-button">צור מבחן חדש</button>
+
 
     <script>
         const questionBank = {
-            roots: [
+             roots: [
                 {
                     text: "מהו השורש והגזרה של המילה 'מתייאשים'?",
                     answer: "יאש",
